# cmake_googletest

./: .gitignore  CMakeLists.txt  README.md
includes/animals/: animal.hpp  dog.hpp
includes/hello_lib/: hello.hpp
includes/shapes/: circle.hpp  rectangle.hpp  shape.hpp  triangle.hpp
src/: CMakeLists.txt  main.cpp
src/animals/: CMakeLists.txt  animal.cpp  dog.cpp
src/hello_lib/: CMakeLists.txt  hello.cpp
src/shapes/: CMakeLists.txt  circle.cpp  rectangle.cpp  triangle.cpp
tests/: CMakeLists.txt  shapes_test.cpp
tests/animals/: CMakeLists.txt  animals_test.cpp
tests/shapes/: CMakeLists.txt
